scripted commit 09-23-18